Switch channel and importance to low so that we don't chime whenever app is reactivated; clean up text of notification message.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -187,7 +187,7 @@
     <string name="lblGPSPoor">Faible</string>
     <string name="lblGPSGood">Bonne</string>
     <string name="lblGPSExcellent">Excellent</string>
-    <string name="lblGPSRunningInBackground">MyFlightbook écoute le GPS en vol</string>
+    <string name="lblGPSRunningInBackground">MyFlightbook écoute le GPS</string>
     <string name="lblFlightOnGround">Au Sol</string>
     <string name="lblFlightInAir">En vol</string>
     <string name="lblElapsedTime">Temps écoulé: </string>
