--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,7 +187,7 @@
     <string name="lblGPSPoor">Poor</string>
     <string name="lblGPSGood">Good</string>
     <string name="lblGPSExcellent">Excellent</string>
-    <string name="lblGPSRunningInBackground">MyFlightbook is listening to GPS while in-flight</string>
+    <string name="lblGPSRunningInBackground">MyFlightbook is listening to the GPS</string>
     <string name="lblFlightOnGround">On Ground</string>
     <string name="lblFlightInAir">In Air</string>
     <string name="lblElapsedTime">Elapsed:</string>
