Issue #125 - app shortcuts a la iOS  - Since only a few can be displayed at a time, do this entirely dynamically  - Added togglePausePlay/startEngine/stopEngine to ListenerFragmentDelegate  - had to do a bit of a hack with pendingAction in order to communicate to the new flight activity, since the ListenerFragmentDelegate isn't set up until after everything is resumed.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -509,4 +509,13 @@
     <string name="hintSearchModels">Des modèles</string>
     <string name="hintSearchVisitedAirports">Aéroports</string>
     <string name="hintSearchProperties">Propriétés</string>
+
+
+    <!-- App Shortcuts -->
+    <string name="shortcutCurrency">Expérience</string>
+    <string name="shortcutTotals">Totaux</string>
+    <string name="shortcutStartEngine">Démarrer le moteur</string>
+    <string name="shortcutStopEngine">Arrêter le moteur</string>
+    <string name="shortcutPause">Pauser</string>
+    <string name="shortcutResume">Reprendre</string>
 </resources>
