Issue #140 - autocomplete for new aircraft  - AircraftForPrefix implementation  - m_ac in ActNewAircraft is no longer static (why was it?)  - Aligned layout of NewAircraft with iOS  - Also fixed airplane -> aircraft  - Moved model prompt into SelectMakes

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -152,7 +152,7 @@
     <string name="lblTail">Immatriculation</string>
     <string name="lblAircraftType">Type</string>
     <string name="lblMakeModel">Fabricant et modèle</string>
-    <string name="lblAddMakes">Si vous ne trouvez pas la désignation de votre aéronef, ajoutez la à MyFlightbook.com.</string>
+    <string name="lblAddMakes">Si vous ne trouvez pas la désignation de votre avion, ajoutez la à MyFlightbook.com.</string>
     <string name="lblBtnAddAircraft">Ajouter un avion</string>
     <string name="lblAnonymous">Cet avion est anonyme</string>
 
