Issue #138 check-in #1: basic support for currency and totals widgets Still need to make clickable, check update frequency, handle "no data"

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -522,4 +522,8 @@
     <string name="shortcutStopEngine">Arrêter le moteur</string>
     <string name="shortcutPause">Pauser</string>
     <string name="shortcutResume">Reprendre</string>
+
+    <!-- Widgets -->
+    <string name="noCurrency">Aucune donnée d\'expérience à afficher</string>
+    <string name="noTotals">Pas de données totales à afficher</string>
 </resources>
