--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -521,4 +521,8 @@
     <string name="shortcutStopEngine">Stop Engine</string>
     <string name="shortcutPause">Pause</string>
     <string name="shortcutResume">Resume</string>
-s</resources>
+
+    <!-- Widgets -->
+    <string name="noCurrency">No currency to display</string>
+    <string name="noTotals">No totals to display</string>
+</resources>
