Issue #145: Support for Templates  - New PropertyTemplate and TemplateGroup classes encapsulate this functionality  - New ActViewTemplates to select the templates you wish to use.  - Switched CustomPropertyTypesSvc away from AvailablePropertyTypesForUser to PropertiesAndTemplatesForUser instead; refreshing properties refreshes templates
 Other misc. fixes/enhancements
 - Aircraft has new DefaultTemplates and DefaultImage properties; Bumped version of SQL data, added columns for defaultImage and default templates
 - szSortKey wasn't being set to szTitle when not otherwise specified; it is now, so sorting should work.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -361,6 +361,8 @@
     <string name="menuSignFlight">Signer</string>
     <string name="menuDeleteAircraft">Effacer Avion</string>
     <string name="menuDeleteAircraftShort">Effacer</string>
+    <string name="menuChooseTemplate">Modèles pour ce vol</string>
+    <string name="menuChooseTemplateShort">Modèles</string>
 
     <!-- Abbreviations -->
     <string name="abbrevNauticalMiles">nm</string>
