Issue #153: add support for next due in maintenance  - Added nextXXX in Aircraft and a NextDueLabel method  - new AddDays and AddCalendarMonths utilities  - Modified StringFromField and SetStringForField to use a TextView instead of EditText, since TextView is the base class

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -164,6 +164,7 @@
     <string name="lblAltimeter">Altimètre:</string>
     <string name="lblELT">Balise de détresse:</string>
     <string name="lblAnnual">Annuelle ou CDN:</string>
+    <string name="lblNextDue">Prochaine échéance: %s</string>
     <string name="lblRegistration">Enregistrement:</string>
     <string name="lbl100Hour">100 Heures:</string>
     <string name="lblOilChange">Vidange:</string>
