Issue #164: support AND/OR/NOT in property and flight characteristic searches

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -369,6 +369,10 @@
     <string name="abbrevNauticalMiles">nm</string>
 
     <!-- Search -->
+    <string name="conjunctionMatches">Correspond</string>
+    <string name="conjunctionAny">au moins</string>
+    <string name="conjunctionAll">à tous</string>
+    <string name="conjunctionNone">à aucun</string>
     <string name="fqTextContains">Contient:</string>
     <string name="fqAirportsVisited">Aéroports:</string>
     <string name="fqTextContainsPrompt">Texte pour a recherche</string>
