--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -408,21 +408,24 @@
     <string name="fqFlightFeatures">Flight Features</string>
     <string name="ffFSLanding">Full-stop Landings</string>
     <string name="ffFSNightLanding">Full-stop Night Landings</string>
+    <string name="ffAnyLandings">Any landings</string>
     <string name="ffApproaches">Instrument Approaches</string>
     <string name="ffHold">Holding Procedures</string>
     <string name="ffTelemetry">Telemetry Data</string>
     <string name="ffImages">Images or videos</string>
     <string name="ffXC">Cross-country time</string>
+    <string name="ffGroundSim">Ground Sim time</string>
     <string name="ffSimIMC">Simulated IMC time</string>
     <string name="ffIMC">Actual IMC time</string>
+    <string name="ffAnyInstrument">IMC or simulated IMC</string>
     <string name="ffNight">Night flight time</string>
     <string name="ffIsPublic">Flight data is shared</string>
     <string name="ffIsSigned">Flight is signed</string>
-    <string name="ffDual">Flight has Dual time</string>
-    <string name="ffCFI">Flight has CFI time</string>
-    <string name="ffSIC">Flight has SIC time</string>
-    <string name="ffPIC">Flight has PIC time</string>
-    <string name="ffTotal">Flight has Total time</string>
+    <string name="ffDual">Dual time</string>
+    <string name="ffCFI">CFI time</string>
+    <string name="ffSIC">SIC time</string>
+    <string name="ffPIC">PIC time</string>
+    <string name="ffTotal">Total time</string>
     <string name="fqDateAllTime">All Time</string>
     <string name="fqDate12Months">Trailing 12 Months</string>
     <string name="fqDate6Months">Trailing 6 Months</string>
