--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -470,7 +470,7 @@
     <string name="lblInstructors">Les instructeurs</string>
     <string name="lblAchievements">Réalisations</string>
     <string name="lblRatingsProgress">Progrès vers la certification</string>
-    <string name="lbl8710">8710 Forme</string>
+    <string name="lbl8710">8710 / IACRA</string>
     <string name="lblReqSigs">Demander des signatures</string>
     <string name="errTrainingNotAvailable">Vous devez être connecté et avoir accès à Internet pour afficher les éléments de formation.</string>
 
