--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -470,7 +470,7 @@
     <string name="lblInstructors">Instructors</string>
     <string name="lblAchievements">Achievements</string>
     <string name="lblRatingsProgress">Ratings Progress</string>
-    <string name="lbl8710">8710 Form</string>
+    <string name="lbl8710">8710 / IACRA</string>
     <string name="lblReqSigs">Request Signatures</string>
     <string name="errTrainingNotAvailable">You must be signed in and have access to the Internet to view training items.</string>
 
