Issue #186: show grouped totals

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -541,4 +541,14 @@
     <!-- Widgets -->
     <string name="noCurrency">Aucune donnée d\'expérience à afficher</string>
     <string name="noTotals">Pas de données totales à afficher</string>
+    
+    <!-- Totals Groups -->
+    <string name="totalsGroupNone">Autres totaux</string>
+    <string name="totalsGroupCategoryClass">Totaux par catégorie / classe</string>
+    <string name="totalsGroupICAO">Totaux par code ICAO</string>
+    <string name="totalsGroupModel">Totaux par modèle</string>
+    <string name="totalsGroupCapabilities">Totaux par caractéristiques d\'aéronef</string>
+    <string name="totalsGroupCore">Heures de journal de bord standard</string>
+    <string name="totalsGroupProperties">Autres totaux</string>
+    <string name="totalsGroupTotal">Temps total de vol total</string>
 </resources>
