--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,6 +8,9 @@
     <string name="UserName">Entrez votre adresse mail:</string>
     <string name="Password">Entrez votre mot de passe</string>
     <string name="signin">Se connecter</string>
+    <string name="TFATitle">Entrez le code d\'authentification</string>
+    <string name="TFAWatermark">######</string>
+    <string name="TFAPrompt">Veuillez saisir le code à 6 chiffres de votre application d\'authentification</string>
 
     <string name="signInPrompt">Vous devez avoir un compte sur MyFlightbook.com pour utiliser MyFlightbook sur Android.</string>
     <string name="statusNotSignedIn">Vous n\'êtes pas identifié.  Merci de vous identifier ou créez un compte.</string>
