Issue #210 - add "Current Flight" option if a completed flight is ready and waiting.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -553,6 +553,7 @@
     <string name="shortcutStopEngine">Arrêter le moteur</string>
     <string name="shortcutPause">Pauser</string>
     <string name="shortcutResume">Reprendre</string>
+    <string name="shortcutCurrentFlight">Vol actuel</string>
 
     <!-- Widgets -->
     <string name="noCurrency">Aucune donnée d\'expérience à afficher</string>
