--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,15 @@
     <string name="lblConfirm">Confirm</string>
     <string name="app_name">MyFlightbook</string>
 
+    <string name="tabNewFlight">New</string>
+    <string name="tabAircraft">Aircraft</string>
+    <string name="tabRecent">Recent</string>
+    <string name="tabCurrency">Currency</string>
+    <string name="tabTotals">Totals</string>
+    <string name="tabVisited">Visited</string>
+    <string name="tabTraining">Training</string>
+    <string name="tabProfile">Profile</string>
+
     <string name="UserName">Please type your email address:</string>
     <string name="Password">Please type your password</string>
     <string name="signin">Sign in</string>
