--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="lblSignature">Signature</string>
     <string name="lblSignatureTemplate1">Signed on %1$s by %2$s</string>
     <string name="lblSignatureTemplate2">(CFI# %1$s, Expiration %2$s)</string>
+    <string name="lblSignatureTemplate2NoExp">(Certificate# %1$s)</string>
 
     <string name="lblNow">Now</string>
     <string name="lblNone">None</string>
